<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_colour"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/toPullDayExercise"
            android:layout_width="0dp"
            android:layout_height="76dp"
            android:layout_marginTop="30dp"
            android:background="?attr/colorAccent"
            android:text="Back To Pull Day Exercises"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <VideoView
            android:id="@+id/BicepCurlsVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toPullDayExercise" />

        <TextView
            android:id="@+id/BicepCurlsEquipment"
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:layout_marginTop="12dp"
            android:text="@string/bicep_Curls_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/BicepCurlsVideo" />




        <VideoView
            android:id="@+id/HammerCurlsVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BicepCurlsEquipment" />

        <TextView
            android:id="@+id/HammerCurlsEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/hammer_Curls_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HammerCurlsVideo" />




        <VideoView
            android:id="@+id/DumbbellRowsVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HammerCurlsEquipment" />

        <TextView
            android:id="@+id/DumbbellRowsEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/dumbbell_Rows_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DumbbellRowsVideo" />



        <VideoView
            android:id="@+id/TbarRowsVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DumbbellRowsEquipment" />

        <TextView
            android:id="@+id/TbarRowsEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/tBar_Rows_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TbarRowsVideo" />




        <VideoView
            android:id="@+id/CableMachineRowsVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TbarRowsEquipment" />

        <TextView
            android:id="@+id/CableMachineRowsEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/cable_Machine_Rows_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CableMachineRowsVideo" />



        <VideoView
            android:id="@+id/LatPulldownVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CableMachineRowsEquipment" />

        <TextView
            android:id="@+id/LatPulldownEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/lat_Pulldown_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LatPulldownVideo" />




        <VideoView
            android:id="@+id/PlateLoadedRowsVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LatPulldownEquipment" />


        <TextView
            android:id="@+id/PlateLoadedRowsEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/plate_Loaded_Rows_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PlateLoadedRowsVideo" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
