<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_colour"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/toPushDayExercise"
            android:layout_width="0dp"
            android:layout_height="76dp"
            android:layout_marginTop="30dp"
            android:background="?attr/colorAccent"
            android:text="Back To Push Day Exercises"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <VideoView
            android:id="@+id/InclinePlateBenchVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toPushDayExercise" />

        <TextView
            android:id="@+id/InclinePlateBenchEquipment"
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:layout_marginTop="12dp"
            android:text="@string/incline_Plate_Bench_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InclinePlateBenchVideo" />






        <VideoView
            android:id="@+id/RegularPlateBenchVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InclinePlateBenchEquipment" />

        <TextView
            android:id="@+id/RegularPlateBenchEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/regular_Plate_Bench_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegularPlateBenchVideo" />






        <VideoView
            android:id="@+id/DumbbellShoulderPressVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegularPlateBenchEquipment" />

        <TextView
            android:id="@+id/DumbbellShoulderPressEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/dumbbell_Shoulder_Press_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DumbbellShoulderPressVideo" />








        <VideoView
            android:id="@+id/CableTricepPushdownVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DumbbellShoulderPressEquipment" />

        <TextView
            android:id="@+id/CableTricepPushdownEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/cable_Tricep_Pushdown_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CableTricepPushdownVideo" />






        <VideoView
            android:id="@+id/OverheadRopeExtensionVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CableTricepPushdownEquipment" />

        <TextView
            android:id="@+id/OverheadRopeExtensionEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/overhead_rope_extension_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OverheadRopeExtensionVideo" />






        <VideoView
            android:id="@+id/LateralRaisesVideo"
            android:layout_width="341dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OverheadRopeExtensionEquipment" />

        <TextView
            android:id="@+id/LateralRaisesEquipment"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:text="@string/lateral_Raises_Info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LateralRaisesVideo" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
